added taking decision on application
